--- a/MISA.EMIS.MF734.PVTHANG/MISA.EMIS.MF734.PVTHANG.Common/Properties/Resources.resx
+++ b/MISA.EMIS.MF734.PVTHANG/MISA.EMIS.MF734.PVTHANG.Common/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ConnectionString" xml:space="preserve">
+    <value>User Id=dev;Password=12345678;Database=MISA.FeeManagement.MF734_PVTHANG;Port=3306;Host=47.241.69.179;Character Set=utf8</value>
+  </data>
   <data name="Error" xml:space="preserve">
     <value>Có lỗi xảy ra, vui lòng thử lại!</value>
   </data>
